tests/snapshots/integration__integration_tests__merge__readme_example_hooks_pre_merge.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--force"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mSquashing 3 commits into a single commit (2 files, [32m+45[0m)...[39m
🔄 [36mGenerating squash commit message...[39m
[107m [0m  [1mfeat(api): Add user authentication endpoints[22m
[107m [0m  
[107m [0m  Implement login and token refresh endpoints with JWT validation.
[107m [0m  Includes comprehensive test coverage and input validation.
✅ [32mSquashed @ [2m69200cc[39m[22m
🔄 [36mRunning pre-merge [1mtest[22m:[39m
[107m [0m  [2m[0m[2m[34muv[0m[2m run pytest[0m
[0m
============================= test session starts ==============================
collected 3 items

tests/test_auth.py::test_login_success PASSED                            [ 33%]
tests/test_auth.py::test_login_invalid_password PASSED                   [ 66%]
tests/test_auth.py::test_token_validation PASSED                         [100%]

============================== 3 passed in 0.8s ===============================

🔄 [36mRunning pre-merge [1mlint[22m:[39m
[107m [0m  [2m[0m[2m[34muv[0m[2m run ruff check[0m
[0m
All checks passed!

🔄 [36mMerging 1 commit to [1mmain[22m @ [2m69200cc[22m (no rebase needed)[39m
[107m [0m  * [33m69200cc[m feat(api): Add user authentication endpoints
[107m [0m   api/auth.py        | 31 [32m+++++++++++++++++++++++++++++++[m
[107m [0m   tests/test_auth.py | 14 [32m++++++++++++++[m
[107m [0m   2 files changed, 45 insertions(+)
✅ [32mMerged to [1mmain[22m (1 commit, 2 files, [32m+45[0m)[39m
🔄 [36mRemoving [1mfeature-auth[22m worktree & branch in background[39m
