tests/snapshots/integration__integration_tests__merge__step_commit_no_verify.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - step
    - commit
    - "--no-verify"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_COMMIT_GENERATION__ARGS: "feat: add file"
    WORKTRUNK_COMMIT_GENERATION__COMMAND: echo
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
💡 [2mSkipping pre-commit hook ([90m--no-verify[39m)[22m
🟡 [33mAuto-staging 2 untracked files:[39m
[107m [0m  .config/
[107m [0m  file1.txt
🔄 [36mCommitting changes with default message... [90m(2 files, [32m+2[39m[39m[90m)[39m[39m
💡 [2mUsing fallback commit message. Run [90mwt config --help[39m for LLM setup guide[22m
[107m [0m  [1mChanges to wt.toml & file1.txt[22m
✅ [32mCommitted changes @ [2m3dbcd5d[22m[39m
